--- a/src/css/_comingsoon.scss
+++ b/src/css/_comingsoon.scss
@@ -12,12 +12,13 @@ body {
   background-position: center;
   background-attachment: fixed;
   width: 100%; 
-  height: 900px;
+  min-height: 500px;
   max-width: none;
   overflow: hidden;
 
   @include respond-to(medium-screen) {
     background-position: 0 0;
+    height: 900px;
   }
   
   &:before{
