--- a/src/css/_comingsoon.scss
+++ b/src/css/_comingsoon.scss
@@ -4,6 +4,7 @@ html {
 
 body {
   font-size: 1.6rem;
+  overflow:hidden;
 }
 
 .container {
@@ -12,7 +13,7 @@ body {
   background-position: center;
   background-attachment: fixed;
   width: 100%; 
-  min-height: 500px;
+  min-height: 600px;
   max-width: none;
   overflow: hidden;
 
