--- a/src/css/_comingsoon.scss
+++ b/src/css/_comingsoon.scss
@@ -36,6 +36,7 @@ body {
   .coming-soon {
     position: fixed;
     top: 10%;
+    bottom: 0;
     width: 100%;
     text-align: center;
     font-family: $montserrat;
