--- a/src/css/_comingsoon.scss
+++ b/src/css/_comingsoon.scss
@@ -7,32 +7,16 @@ body {
 }
 
 .container {
-  background: url(../img/herobanner.jpg) center no-repeat;
+  background: url(../img/comingsoon-banner.jpg) top center no-repeat fixed;
   background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
   width: 100%; 
   min-height: 600px;
   max-width: none;
-  overflow: hidden;
 
   @include respond-to(medium-screen) {
-    background-position: 0 0;
-    height: 900px;
+    // background-position: 0 0;
   }
   
-  &:before{
-    content:'';
-    position: absolute;
-    width: 100%;
-    background-color: rgba(0,0,0,0.25);
-    min-height: 600px;
-
-    @include respond-to(medium-screen) {
-      height: 900px;
-    }
-  }
-
   .coming-soon {
     position: fixed;
     top: 10%;
