--- a/src/css/_comingsoon.scss
+++ b/src/css/_comingsoon.scss
@@ -1,16 +1,19 @@
 html {
   font-size: 10px;
+  overflow: hidden;
 }
 
 body {
   font-size: 1.6rem;
+  width: 100%;
+  height: 100%;
 }
 
 .container {
   background: url(../img/comingsoon-banner.jpg) top center no-repeat fixed;
   background-size: cover;
   width: 100%; 
-  min-height: 600px;
+  min-height: 800px;
   max-width: none;
 
   @include respond-to(medium-screen) {
