--- a/src/css/_comingsoon.scss
+++ b/src/css/_comingsoon.scss
@@ -32,7 +32,7 @@ body {
 
     .site-logo {
       display: block;
-      background: url(../img/logo-white02.svg) no-repeat;
+      background: url(../img/logo-white.svg) no-repeat;
       background-size: contain;
       width: 200px;
       height: 200px;
